samples/_failures_safe/1761695921_3c515c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c732a05.c: In function ‘main’:
./samples/SAFE/__tmp_1c732a05.c:174:28: error: missing terminating " character
  174 |                     printf("State: FINISHED - Type 'R' to reset or 'S' to start new\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1c732a05.c:174:21: error: expected expression at end of input
  174 |                     printf("State: FINISHED - Type 'R' to reset or 'S' to start new\n
      |                     ^~~~~~
./samples/SAFE/__tmp_1c732a05.c:174:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c732a05.c:174:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c732a05.c:174:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c732a05.c:174:21: error: expected declaration or statement at end of input
